# clamd-client

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clamd.conf  freshclam.conf
.github/workflows/: test.yaml
examples/: simple.rs
src/: error.rs  lib.rs  util.rs
