[package]
name = "clamd-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net"]}
futures = { version = "0.3" }
tracing = { version = "0.1" }
thiserror = { version = "1.0" }
bytes = { version = "1" }
tokio-util = { version = "0.7", features = ["codec"]}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6" }