[package]
name = "clamd-client"
version = "0.1.0"
edition = "2021"
authors = ["Lennart Vogelsang <lennart@vogelsang.berlin"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "fs"]}
futures = { version = "0.3" }
tracing = { version = "0.1" }
thiserror = { version = "1.0" }
bytes = { version = "1" }
tokio-util = { version = "0.7", features = ["codec"]}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6" }
tracing-subscriber = "0.3"
rand = { version = "0.8"}
    tracing-test = "0.1"
    reqwest = "0.11"