[package]
name = "clamd-client"
description = "Rust async tokio client for clamd. Works with a tcp socket or with the unix socket. At the moment it will open a new socket for each command. Work in progress."
keywords = ["clamd", "clamav", "virus-scanning", ]
version = "0.1.2"
edition = "2021"
authors = ["Lennart Vogelsang <lennart@vogelsang.berlin>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LevitatingOrange/clamd-client"
homepage = "https://github.com/LevitatingOrange/clamd-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1" }
futures = { version = "0.3" }
socket2 = { version = "0.4" }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["net", "io-util", "fs"]}
tokio-util = { version = "0.7", features = ["codec"]}
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6" }
tracing-subscriber = "0.3"
rand = { version = "0.8"}
tracing-test = "0.1"
reqwest = "0.11"